# FlexMap_Fusion

./: CMakeLists.txt  Dockerfile  README.md  build_docker.sh  package.xml  run_docker.sh
analysis/: plot_georef.py  plot_matching.py  plot_traj_matching.py  utility.py
config/: config_param.py  get_param.py  kiss_icp_georef.param.yaml  lanelet2_osm.param.yaml  rviz_conf.rviz  rviz_conf_kiss_icp_georef.rviz
doc/: alignment.md  analysis.md  conflation.md  georef.md  matching.md  preprocessing.md
docker/: Dockerfile  build_docker.sh  requirements.txt  run_docker.sh
include/flexmap_fusion/: kiss_icp_georef.hpp  lanelet2_osm.hpp  param_kiss_icp_georef.hpp  utility.hpp
include/flexmap_fusion/conflation/: conflation.hpp
include/flexmap_fusion/extract_network/: extract_network.hpp
include/flexmap_fusion/file_io/: file_in.hpp  file_out.hpp
include/flexmap_fusion/map_transformation/: align.hpp  rubber_sheeting.hpp
include/flexmap_fusion/messages/: visualization.hpp
include/tum_lanelet2_osm_fusion/: lanelet2_osm.hpp  param.hpp  param_lanelet2_osm.hpp
include/tum_lanelet2_osm_fusion/analysis/: analysis.hpp
include/tum_lanelet2_osm_fusion/conflation/: matching.hpp
include/tum_lanelet2_osm_fusion/extract_network/: extract_network.hpp
include/tum_lanelet2_osm_fusion/file_io/: file_in.hpp  file_out.hpp
include/tum_lanelet2_osm_fusion/map_transformation/: align.hpp  rubber_sheeting.hpp
include/tum_lanelet2_osm_fusion/messages/: color.hpp  message_conversion.hpp  messages.hpp  visualization.hpp
launch/: kiss_icp_georef.launch.py  lanelet2_osm.launch.py
src/: kiss_icp_georef.cpp  lanelet2_osm.cpp
src/analysis/: analysis.cpp
src/conflation/: conflation.cpp  matching.cpp
src/extract_network/: extract_network.cpp
src/file_io/: file_in.cpp  file_out.cpp
src/map_transformation/: align.cpp  rubber_sheeting.cpp
src/messages/: message_conversion.cpp  messages.cpp  visualization.cpp
test/: kitti01_odom_MULLS_end.txt  kitti_01_GPS_end.txt  lanelet2_route_1.osm  route1_pose_kitti.txt  route_1_GPS.txt  smc_laneletmap_preprocessed_VMB.osm
