<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>flexmap_fusion</name>
  <version>0.0.0</version>
  <description>Package to improve erroneous lanelet2 map from vehicle-centric algorithms with OpenStreetMap data</description>
  <maintainer email="maxi.leitenstern@tum.de">Maximilian Leitenstern</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>message_filters</depend>
  <depend>pcl_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>sensor_msgs</depend>
  <depend>rclcpp</depend>
  <depend>lanelet2_core</depend>
  <depend>lanelet2_io</depend>
  <depend>lanelet2_projection</depend>
  <depend>rclcpp_components</depend>
  <depend>visualization_msgs</depend>
  <depend>curl</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
